# tansen

./: CMakeLists.txt  readme.md  taal.cpp
cli/: command_lexer.l  command_parser.y
data/: tals.json
harmonium/: DH.py  advanced.py  advanced_1.py  advanced_2.py  engine.py  engine_runtime.py
harmonium/harmonium_engine/: Readme.md
harmonium/harmonium_engine/harmonium/realtime/: engine_runtime.py
include/: MIDIHandler.h  TaalManager.h  Tempo.h  midi_generator.h  taal.h
src/: MIDIHandler.cpp  TaalManager.cpp  Tempo.cpp  main.cpp  midi_generator.cpp  taal.cpp
